themes/oliver/assets/css/base.temp.css
body {
  font-family: "Helvetica", "Arial", sans-serif;
  line-height: 1.6;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0;
  padding: 0;
  letter-spacing: 0.05rem;
}

main {
  flex-grow: 1;
  z-index: 100;
}

img {
  max-width: 100%;
  /* border-radius: 0.2rem; */
}

pre {
  overflow-x: auto;
  border: 0.1rem solid lightgray;
  padding: 1rem;
}

code {
  font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, Courier, monospace;
}

nav {
  padding-top: 2rem;
  position: fixed;
  width: 100%;
  background: rgb(255,255,255);
  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
  z-index: 500;
}

h1 {
  font-size: 1rem;
  font-weight: normal;
}
h2 {
  font-size: 1rem;
  font-weight: normal;

}
h4 {
  font-size: 1rem;
  font-weight: normal;
  margin-block-start: 0.6em;
}
figure {
  font-size: 1rem;
  text-align: center;
  line-height: 1em;
}

a {
  color: black;
  text-decoration: none;
}

.Banner {
  list-style: none;
  display: flex;
  flex-flow: row-reverse wrap-reverse;
  justify-content: center;
  margin: 0;
  padding: 0;
  letter-spacing: 2px;
  line-height: 1.2rem;
  padding-bottom: 2rem;
}

{{ $len := len site.Menus.nav }}
{{ range seq $len }}

.Banner-item:nth-child({{ . }}) {
  order: {{ sub $len . | add 1 }};
}

{{ end }}

.Banner-item--title {
  flex-basis: 100%;
  text-align: center;
}

.Banner-link {
  font-size: 1.4rem;
  color: black;
  padding: 0rem 0.7rem;
}

.Heading {
  display: flex;
  flex-wrap: wrap;
  justify-content: left;
  align-items: baseline;
}

.Heading-title {
  margin: 1.5rem 0.5rem 0 0;
}

.Heading-link {
  color: inherit;
}

.homepageprojectlink {
  color: inherit;
  display: block;
}

.Tags {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: baseline;
  margin: 0rem 0;
  padding: 0;
}

.Tags-item {
  margin: 0.1rem;
  padding: 0rem;
}


.Tags-link {
  color: black;
}

.Pagination {
  font-size: 1.25rem;
  color: inherit;
}

.Pagination--right {
  float: right;
}

.Footer {
  text-align: center;
  margin: 1rem 0;
}

.u-wrapper {
  margin: auto;
  max-width: 42rem;
}

.u-padding {
  padding: 0 1rem;
}

.articles {
  width: 100%;
  text-align: center;
  letter-spacing: 2px;
}

.articles article {
  padding: 0.4rem;
  border-bottom: 2px solid black;
}

.articles .spacer {
  height: 15rem;
  border-bottom: 2px solid black;
}

.articles h2 {
  font-size: 1.4rem;
  font-weight: normal;
  margin-block-start: 0em;
  margin-block-end: 0em;
}


.background-image2{
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: blue;
}


.background-image {
    position: fixed;
    z-index: 1;
    right: 0;
    bottom: 0;
    /* min-width: 50%;
    min-height: 50%; */
    max-width: 100%;
    /* transform: translateX(calc((100% - 100vw) / 2)); */
}

.show-as-background {
  display: block !important;
}

.background-content {
  display: none;
}

.u-background {

}

article a {
  color: black;
}
.u-clickable {
  text-decoration: none;
  display: inline-block;
}

.page-centered-element {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}
.content {
  text-align: center;
  overflow: hidden;
}

.spacer {
    height: 13rem;
}
/* .content-media-spacer { */
/*     height: 13rem; */
/*     background-color: orange; */
/* } */
@media only screen and (max-height: 736px) {
    .content-media-spacer {
        height: 30rem;
    }
}
@media only screen and (max-height: 667px) {
    .content-media-spacer {
        height: 20rem;
    }
}




ul.tags {
  font-size: 0;
  white-space: nowrap;
}

ul.tags li{
  display: inline-block;
  font-size: 1rem;
  white-space: initial;
  padding: 0.2rem;
}

/* about page */
.about {
  columns: 1;
}
@media (min-width: 992px)
{
  .about {
    columns: 2;
  }
}
@media (min-width: 1200px)
{
  .about {
    columns: 3;
  }
}

.about ul {
  list-style-type: none;
  padding-left: 0;
  margin-top:0;
}
.about h1 {
  margin-top: 2rem;
}
.about h2 {
  margin-bottom: 0;
}


/* index view */
* {
  box-sizing: border-box;
}

.outer {
  width: 100%;
  margin: 0 auto;
}

.wrapper {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}
@media (min-width: 768px)
{
  .wrapper {
    grid-template-columns: repeat(4, 1fr);
  }
}
@media (min-width: 992px)
{
  .wrapper {
    grid-template-columns: repeat(6, 1fr);
  }
}

@media (min-width: 1200px)
{
  .wrapper {
    grid-template-columns: repeat(8, 1fr);
  }
}


.wrapper>div:not(.line) {
  padding: 1rem;
}
.line {
  grid-column: 1 / -1;
  height: 2px;
  background-color: black;
}
.line4 {
  display: none;
}
.line6 {
  display: none;
}
.line8 {
  display: none;
}
@media (min-width: 768px)
{
  .line2 {display: none;}
  .line4 { display: inherit; }
}
@media (min-width: 992px)
{
  .line2 {display: none;}
  .line4 {display: none;}
  .line6 { display: inherit; }
}
@media (min-width: 1200px)
{
  .line2 {display: none;}
  .line4 {display: none;}
  .line6 { display: none; }
  .line8 {display: inherit;}
}

.wrapper img:hover {
	-webkit-filter: grayscale(0) !important;
	filter: grayscale(0) !important;
}

.wrapper img {
	-webkit-filter: grayscale(100%) !important;
	filter: grayscale(100%) !important;
}

